--- a/templates/index.html
+++ b/templates/index.html
@@ -21,12 +21,10 @@
 				{% thumbnail obj.cover "992" as lg %}
 				{% thumbnail obj.cover "1200" as xl %}
 				<img class="lazyload"
-					src="{{ xs.url }}"
 					data-src="{% get_media_prefix %}{{ obj.cover }}"
 					data-srcset="{{ sm.url }} {{ sm.x }}w, {{ md.url }} {{ md.x }}w, {{ lg.url }} {{ lg.x }}w, {{ xl.url }} {{ xl.x }}w, {{ obj.cover.url }} {{ obj.cover.width }}w"
-					data-sizes="auto"
-					data-expand="-50"
-					loading="lazy"
+					width="{{obj.cover.width}}"
+					height="{{obj.cover.height}}"
 				>
 
 				{% if obj.portfolio.count > 0 %}
@@ -77,15 +75,15 @@
 					{% thumbnail obj.cover "768" as md %}
 					{% thumbnail obj.cover "992" as lg %}
 					{% thumbnail obj.cover "1200" as xl %}
-					<img class="card-img-top lazyload"
-						src="{{ xs.url }}"
-						data-src="{% get_media_prefix %}{{ obj.cover }}"
-						data-srcset="{{ xs.url }} {{ xs.x }}w, {{ sm.url }} {{ sm.x }}w, {{ md.url }} {{ md.x }}w, {{ lg.url }} {{ lg.x }}w, {{ xl.url }} {{ xl.x }}w, {{ obj.cover.url }} {{ obj.cover.width }}w"
-						data-sizes="auto"
-						data-expand="-50"
-						loading="lazy"
-						alt="{{obj.title}}"
-					>
+					<div class="ratio ratio-4x3">
+						<img class="lazyload"
+							data-src="{% get_media_prefix %}{{ obj.cover }}"
+							data-srcset="{{ xs.url }} {{ xs.x }}w, {{ sm.url }} {{ sm.x }}w, {{ md.url }} {{ md.x }}w, {{ lg.url }} {{ lg.x }}w, {{ xl.url }} {{ xl.x }}w, {{ obj.cover.url }} {{ obj.cover.width }}w"
+							width="{{obj.cover.width}}"
+							height="{{obj.cover.height}}"
+							alt="{{obj.title}}"
+						>
+					</div>
 					{% endthumbnail %}
 					{% endthumbnail %}
 					{% endthumbnail %}
@@ -135,13 +133,12 @@
 									{% thumbnail img.file "992" as md %}
 									{% thumbnail img.file "1200" as xl %}
 									<img id="image-{{forloop.counter0}}" class="lazyload"
-										src="{{ xs.url }}"
 										data-src="{% get_media_prefix %}{{ img.file }}"
 										data-srcset="{{ xs.url }} {{ xs.x }}w, {{ sm.url }} {{ sm.x }}w, {{ md.url }} {{ md.x }}w, {{ xl.url }} {{ xl.x }}w"
 										data-sizes="auto"
 										data-expand="50"
-										max-width="{{img.file.width}}"
-										max-height="{{img.file.height}}"
+										width="{{img.file.width}}"
+										height="{{img.file.height}}"
 										loading="lazy"
 										title="{% if img.title %}{{ img.title }}{% endif %}"
 										alt="{% if img.excerpt %}{{ img.excerpt }}. {% endif %}Создано: {{ portfolio.created }}"
@@ -213,8 +210,7 @@
 		<div class="modal-close centered no-select" data-bs-dismiss="modal" aria-label="Закрыть">Закрыть <svg class="close-icon icon"><use xlink:href="#close-icon"></use></svg></div>
 		<div class="modal-dialog">
 			<div id="portfolioSlider" class="carousel slide" data-bs-interval="false">
-				<div class="carousel-inner">
-				</div>
+				<div class="carousel-inner"></div>
 
 				<div class="controls-block no-select">
 					<button class="carousel-control-prev" type="button" data-bs-target="#portfolioSlider" data-bs-slide="prev">
